ci(deploy): enhance build diagnostics and disable service worker registration
- Add verbose logging to publish step to display framework files and dotnet.js availability
- Include directory listing of published _framework directory for debugging
- Add file search command to locate dotnet runtime files in build output
- Comment out service worker registration in index.html to prevent caching issues during deployment
- Improve visibility into build artifacts for troubleshooting deployment problems

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,14 @@ jobs:
 
       - name: Publish (main only)
         if: github.ref == 'refs/heads/main'
-        run: dotnet publish src/CypherSheet.Client/CypherSheet.Client.csproj -c Release -o dist
+        run: |
+          dotnet publish src/CypherSheet.Client/CypherSheet.Client.csproj -c Release -o dist --verbosity normal
+          
+          echo "=== Published files in _framework ==="
+          ls -la dist/wwwroot/_framework/ | head -20
+          
+          echo "=== Checking for dotnet.js ==="
+          find dist/wwwroot/_framework/ -name "*dotnet*" -type f
 
       - name: Configure GitHub Pages
         if: github.ref == 'refs/heads/main'
