--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install jq for JSON parsing
+        run: sudo apt-get update && sudo apt-get install -y jq
+
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '10.0.x'
@@ -39,8 +42,16 @@ jobs:
           echo "=== Published files in _framework ==="
           ls -la dist/wwwroot/_framework/ | head -20
           
-          echo "=== Checking for dotnet.js ==="
+          echo "=== Checking for dotnet files ==="
           find dist/wwwroot/_framework/ -name "*dotnet*" -type f
+          
+          echo "=== Checking blazor.boot.json ==="
+          if [ -f dist/wwwroot/_framework/blazor.boot.json ]; then
+            cat dist/wwwroot/_framework/blazor.boot.json | jq '.resources.runtime' || cat dist/wwwroot/_framework/blazor.boot.json
+          fi
+          
+          echo "=== All .js files in _framework ==="
+          find dist/wwwroot/_framework/ -name "*.js" -type f
 
       - name: Configure GitHub Pages
         if: github.ref == 'refs/heads/main'
