ci(deploy): migrate base path configuration to publish profile
- Move BasePath parameter from deploy workflow to project file
- Add GitHub Pages publish profile configuration in CypherSheet.Client.csproj
- Update deploy workflow to use PublishProfile=GitHubPages instead of inline BasePath
- Centralize deployment configuration for better maintainability and reusability

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Publish for GitHub Pages
         if: github.ref == 'refs/heads/main'
-        run: dotnet publish src/CypherSheet.Client/CypherSheet.Client.csproj -c Release -o dist -p:BasePath=/CypherSheet/
+        run: dotnet publish src/CypherSheet.Client/CypherSheet.Client.csproj -c Release -o dist -p:PublishProfile=GitHubPages
 
       - name: Configure GitHub Pages
         if: github.ref == 'refs/heads/main'
