--- a/src/CypherSheet.Client/CypherSheet.Client.csproj
+++ b/src/CypherSheet.Client/CypherSheet.Client.csproj
@@ -7,6 +7,11 @@
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
   </PropertyGroup>
 
+  <!-- GitHub Pages Configuration -->
+  <PropertyGroup Condition="'$(PublishProfile)' == 'GitHubPages'">
+    <BaseHref>/CypherSheet/</BaseHref>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="10.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="10.0.1" PrivateAssets="all" />
