ci(deploy): optimize build pipeline and remove pull request trigger
- Remove pull_request trigger from GitHub Actions workflow to deploy only on main branch pushes
- Add explicit step names for restore, build, and test operations for improved clarity
- Add --nologo flag to all dotnet commands to reduce output verbosity
- Update publish step to use --no-build flag to skip redundant compilation
- Update test step to use --no-build flag since build is now explicit
- Add GitHub Pages configuration to project file with BaseHref and StaticWebAssetBasePath properties
- Streamline CI/CD pipeline by eliminating unnecessary rebuilds and improving step visibility

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,7 @@ name: Deploy Blazor PWA to GitHub Pages
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+
   workflow_dispatch:
 
 permissions:
@@ -27,13 +26,18 @@ jobs:
         with:
           dotnet-version: '10.0.x'
 
-      - run: dotnet restore
+      - name: Restore Dependencies
+        run: dotnet restore --nologo
 
-      - run: dotnet test --configuration Release
+      - name: Build
+        run: dotnet build --no-restore --configuration Release --nologo
+
+      - name: Tests
+        run: dotnet test --no-build --configuration Release --nologo
 
       - name: Publish for GitHub Pages
         if: github.ref == 'refs/heads/main'
-        run: dotnet publish src/CypherSheet.Client/CypherSheet.Client.csproj -c Release -o dist -p:PublishProfile=GitHubPages
+        run: dotnet publish src/CypherSheet.Client/CypherSheet.Client.csproj -c Release --no-build -o dist -p:PublishProfile=GitHubPages --nologo
 
       - name: Configure GitHub Pages
         if: github.ref == 'refs/heads/main'
