ci(deploy): simplify GitHub Pages deployment pipeline
- Remove explicit BaseHref and StaticWebAssetBasePath parameters from publish command
- Migrate configuration to GitHubPages publish profile in project file
- Update BaseHref to use full URL format in publish profile
- Remove build step and use --no-build flag in publish command
- Simplify restore and test commands by removing verbose flags
- Remove file verification logging and error handling from publish step
- Streamline 404.html configuration with simplified comment
- Remove trailing newline from workflow file
- Consolidate deployment configuration into publish profile for better maintainability

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,6 @@ name: Deploy Blazor PWA to GitHub Pages
 on:
   push:
     branches: [ main ]
-
   workflow_dispatch:
 
 permissions:
@@ -26,36 +25,19 @@ jobs:
         with:
           dotnet-version: '10.0.x'
 
-      - name: Restore Dependencies
-        run: dotnet restore --nologo
+      - run: dotnet restore
 
-      - name: Build
-        run: dotnet build --no-restore --configuration Release --nologo
-
-      - name: Tests
-        run: dotnet test --no-build --configuration Release --nologo
+      - run: dotnet test --configuration Release
 
       - name: Publish for GitHub Pages
         if: github.ref == 'refs/heads/main'
-        run: |
-          echo "Publishing with BaseHref and StaticWebAssetBasePath"
-          dotnet publish src/CypherSheet.Client/CypherSheet.Client.csproj -c Release --no-build -o dist -p:BaseHref="/CypherSheet/" -p:StaticWebAssetBasePath="CypherSheet" --nologo
-          
-          echo "=== Checking if files were generated ==="
-          ls -la dist/ || echo "dist folder not found"
-          ls -la dist/wwwroot/ || echo "wwwroot folder not found"
+        run: dotnet publish src/CypherSheet.Client/CypherSheet.Client.csproj -c Release -o dist -p:PublishProfile=GitHubPages
 
       - name: Configure GitHub Pages
         if: github.ref == 'refs/heads/main'
         run: |
-          # Verify files exist before copying
-          if [ -f "dist/wwwroot/index.html" ]; then
-            echo "index.html found, copying to 404.html"
-            cp dist/wwwroot/index.html dist/wwwroot/404.html
-          else
-            echo "ERROR: index.html not found in dist/wwwroot/"
-            exit 1
-          fi
+          # Copy index.html to 404.html for SPA routing
+          cp dist/wwwroot/index.html dist/wwwroot/404.html
           
           # Add .nojekyll to prevent Jekyll processing
           touch dist/wwwroot/.nojekyll
