ci(deploy): add debugging and error handling to GitHub Pages configuration
- Add directory listing commands to debug dist and wwwroot contents
- Add conditional check for index.html existence before copying to 404.html
- Add success message when index.html is successfully copied to 404.html
- Add error message and exit code when index.html is not found
- Improve deployment reliability by catching missing files early in the pipeline

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,8 +36,20 @@ jobs:
       - name: Configure GitHub Pages
         if: github.ref == 'refs/heads/main'
         run: |
+          # List contents to debug
+          echo "Contents of dist directory:"
+          ls -la dist/
+          echo "Contents of dist/wwwroot directory:"
+          ls -la dist/wwwroot/ || echo "wwwroot directory not found"
+          
           # Copy index.html to 404.html for SPA routing
-          cp dist/wwwroot/index.html dist/wwwroot/404.html
+          if [ -f "dist/wwwroot/index.html" ]; then
+            cp dist/wwwroot/index.html dist/wwwroot/404.html
+            echo "Successfully copied index.html to 404.html"
+          else
+            echo "Error: index.html not found in dist/wwwroot/"
+            exit 1
+          fi
           
           # Add .nojekyll to prevent Jekyll processing
           touch dist/wwwroot/.nojekyll
