ci(docker): align Docker and nginx configuration with GitHub Pages deployment structure
- Update Dockerfile to serve application from /CypherSheet/ subdirectory instead of root to match GitHub Pages hosting structure
- Refactor nginx.conf to handle /CypherSheet/ base path routing with proper SPA fallback configuration
- Add root redirect from / to /CypherSheet/ to simulate GitHub Pages deployment environment
- Update all location blocks (_framework, .wasm, static assets, compression) to work with /CypherSheet/ prefix
- Add commented local development base href in index.html for reference
- Ensure consistent path handling between Docker container and production GitHub Pages deployment

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,37 +2,47 @@ server {
     listen 80;
     server_name localhost;
 
-    root /usr/share/nginx/html;
-    index index.html;
-
     # Configurar logs apenas para erros importantes
     access_log off;
     error_log /var/log/nginx/error.log warn;
 
-    # SPA fallback - redireciona todas as rotas para index.html
-    location / {
-        try_files $uri $uri/ /index.html;
+    # Redireciona raiz para /CypherSheet/ (simula GitHub Pages)
+    location = / {
+        return 301 /CypherSheet/;
+    }
+
+    # Configuração para simular GitHub Pages - app servido em /CypherSheet/
+    location /CypherSheet/ {
+        root /usr/share/nginx/html;
+        index index.html;
+        
+        # SPA fallback - redireciona todas as rotas para index.html
+        try_files $uri $uri/ /CypherSheet/index.html;
     }
 
     # Configuração específica para _framework (Blazor WebAssembly)
-    location /_framework/ {
+    location /CypherSheet/_framework/ {
+        root /usr/share/nginx/html;
         add_header Cache-Control "public, max-age=31536000, immutable";
         try_files $uri =404;
     }
 
     # MIME type correto para arquivos .wasm
-    location ~* \.(wasm)$ {
+    location ~* /CypherSheet/.*\.(wasm)$ {
+        root /usr/share/nginx/html;
         default_type application/wasm;
         add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
     # Cache para recursos estáticos
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|webmanifest)$ {
+    location ~* /CypherSheet/.*\.(js|css|png|jpg|jpeg|gif|ico|svg|webmanifest)$ {
+        root /usr/share/nginx/html;
         add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
     # Suporte para compressão brotli e gzip
-    location ~* \.(js|css|wasm)$ {
+    location ~* /CypherSheet/.*\.(js|css|wasm)$ {
+        root /usr/share/nginx/html;
         gzip_static on;
         add_header Cache-Control "public, max-age=31536000, immutable";
     }
