feat(data-management): add import/export and data deletion UI components
- Add DeleteAllDataDialog component with confirmation workflow for permanent data deletion
- Add ExportModal component with character selection and multiple export format support
- Add ImportModal component with file upload and import result handling
- Add LoadingButton shared component for async operations with loading state
- Add LoadingOverlay shared component for full-page loading indicators
- Add clipboard.js utility for copy-to-clipboard functionality
- Add DataManagementError, ExportFormat, and ImportResult domain models
- Update SettingsView to integrate new data management dialogs
- Update MainLayout to include LoadingOverlay component
- Update Program.cs to register data management and loading services
- Update _Imports.razor with new component namespaces
- Update index.html with clipboard script reference
- Enables users to backup, restore, and manage their application data with visual feedback

--- a/src/CypherSheet.Shared/CypherSheet.Shared.csproj
+++ b/src/CypherSheet.Shared/CypherSheet.Shared.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CypherSheet.Domain\CypherSheet.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
